--- a/verse-abyss/app/component/infiniteScroll/infinite.css
+++ b/verse-abyss/app/component/infiniteScroll/infinite.css
@@ -1,1 +1,1 @@
-#scrollableDiv{max-height:70vh;overflow-y:auto;padding:1.5rem}.texts{display:grid;grid-template-columns:repeat(auto-fill, minmax(400px, 1fr));gap:1rem}
+#scrollableDiv{padding:1rem}.texts{display:grid;grid-template-columns:repeat(auto-fill, minmax(400px, 1fr));gap:1rem;padding:1rem}
