--- a/verse-abyss/app/component/textCard/textCard.scss
+++ b/verse-abyss/app/component/textCard/textCard.scss
@@ -138,6 +138,7 @@
       .heart-icon {
         color: var(--text-muted);
         transition: color 0.2s ease;
+        cursor: pointer;
 
         &.favorited {
           color: white;
