--- a/verse-abyss/app/(main)/main/favorito/favorite.scss
+++ b/verse-abyss/app/(main)/main/favorito/favorite.scss
@@ -8,6 +8,28 @@
   max-height: 100vh;
   overflow-y: auto;
   width: 100%;
+
+    // Estilização da scrollbar
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: var(--scrollbar-track); // Caminho da Alma
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--scrollbar-thumb); // Movimento Contido
+    border-radius: 10px;
+    border: 2px solid var(--scrollbar-track);
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: var(--scrollbar-thumb-hover); // Fluxo de Consciência
+  }
+
+  scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track); // Para Firefox
+  scrollbar-width: thin; // Para Firefox
 }
 
 .favorites {
@@ -15,6 +37,7 @@
     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     gap: 1rem;
     padding: 1rem;
+    margin-top: 1rem;
 }
 
 .favorite-card {
