--- a/verse-abyss/app/(main)/main/home.scss
+++ b/verse-abyss/app/(main)/main/home.scss
@@ -1,6 +1,29 @@
+@import '../../styles/variables';
 
 .home {
-    max-height: 100vh;
-    overflow-y: auto;
-    width: 100%;
+  max-height: 100vh;
+  overflow-y: auto;
+  width: 100%;
+
+  // Estilização da scrollbar
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: var(--scrollbar-track); // Caminho da Alma
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--scrollbar-thumb); // Movimento Contido
+    border-radius: 10px;
+    border: 2px solid var(--scrollbar-track);
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: var(--scrollbar-thumb-hover); // Fluxo de Consciência
+  }
+
+  scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track); // Para Firefox
+  scrollbar-width: thin; // Para Firefox
 }
