--- a/verse-abyss/app/component/header/header.scss
+++ b/verse-abyss/app/component/header/header.scss
@@ -20,6 +20,7 @@
         margin-bottom: 2rem;
         align-self: flex-start;
         letter-spacing: 1px;
+        cursor: pointer;
     }
 
     nav {
